--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-streamlit
+streamlit==1.39.0
 pandas
+numpy
 matplotlib
 seaborn
 scikit-learn
-joblib
-imbalanced-learn
 xgboost
-lightgbm
+joblib
 category_encoders
+lightgbm
+
